# ksch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: cli.md  schema-v1.md
docs/superpowers/plans/: 2026-04-27-kicad-schema-compiler.md  2026-05-04-layout-problem-spine.md
docs/superpowers/specs/: 2026-04-27-kicad-schema-compiler-design.md
examples/basic-board/: README.md  ksch.toml
examples/basic-board/schematic/: project.ksch.yaml
issues/: automatic-layout-functional-island-planning.md  cm5-roundtrip-exact-parity.md  large-sheet-ic-label-density.md  layout-engine-failed-experiment-postmortem.md  open-source-kicad-roundtrip-witnesses.md  preserve-kicad-power-pseudo-symbols.md  route-aware-contact-layout.md  structured-edit-endpoint-expression-splitting.md  unified-schematic-geometry-system.md
scripts/: check.sh  test.sh
snapshots/cm5-hudsp-gmsl2-camera-baseline/: README.md  gmsl2_camera.after.kicad_sch  gmsl2_camera.before.kicad_sch  gmsl2_camera.layout.after.json  gmsl2_camera.layout.before.json  gmsl2_camera.layout.diff.json  gmsl2_camera.layout.diff.md
src/ksch/: authoring.py  circuit_motifs.py  circuit_regions.py  cli.py  compiler.py  config.py  edit.py  emit.py  errors.py  expand.py  explain.py  geometry.py  graph.py  ids.py  importer.py  layout.py  layout_problem.py  layout_solver.py  local_topology.py  migrate.py  net_routing.py  placed.py  placed_emit_helpers.py  placed_normalize.py  placement.py  power_flags.py  project_context.py  resolver.py  routing.py  scaffold.py  schematic_geometry.py  segment_geometry.py  validation.py  verify.py
src/ksch/kicad/: footprints.py  libraries.py  (+2 more)
tests/: test_authoring_cli.py  test_check_cli.py  test_circuit_motifs.py  test_circuit_regions.py  test_cli.py  test_compile_cli.py  test_compiler_architecture.py  test_edit.py  test_emit.py  test_emit_layout.py  test_endpoint_model.py  test_examples.py  test_expand.py  test_importer.py  test_init_cli.py  test_kicad_cli_integration.py  test_kicad_indexers.py  test_kicad_libraries.py  test_layout.py  test_layout_problem.py  test_local_topology.py  test_mcp_adapter.py  test_package.py  test_resolver.py  test_routing.py  test_schema_loader.py  test_segment_geometry.py  test_source_model.py  test_validation.py  test_verify.py
(+27 files in other folders)
