[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kicad-schema"
version = "0.1.0"
description = "Canonical text-first schematic compiler for KiCad"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "mcp>=1.0.0",
  "pydantic>=2.7",
  "rich>=13.7",
  "ruamel.yaml>=0.18",
  "sexpdata>=1.0.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
ksch = "ksch.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ksch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
